--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "site",
+  "name": "neonmint-portfolio",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -10,10 +10,8 @@
   },
   "dependencies": {
     "@astrojs/preact": "^4.0.8",
-    "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.3.0",
     "@tailwindcss/vite": "^4.1.8",
-    "@vercel/speed-insights": "^1.2.0",
     "alpinejs": "^3.14.9",
     "astro": "^5.6.1",
     "astro-icon": "^1.1.5",
